--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "compile": "babel index.master.js --out-file compiled.js",
     "mine": "babel mine/index.js --out-file mine/compiled.js",
     "demo": "babel demo/index.js --out-file demo/compiled.js",
-    "optimized": "babel optimized/index.js --out-file optimized/compiled.js"
+    "optimized": "babel optimized.1/index.js --out-file optimized.1/compiled.js"
   },
   "author": "",
   "license": "SEE LICENSE IN whatever",
